--- a/TouchPortal Plugin Helper/DefineValueChoicesEvent.xaml
+++ b/TouchPortal Plugin Helper/DefineValueChoicesEvent.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TouchPortal_Plugin_Helper.DefineValueChoices"
+﻿<Page x:Class="TouchPortal_Plugin_Helper.DefineValueChoicesEvent"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
